--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -283,6 +283,11 @@ git pull -s recursive -X theirs upstream master</pre>
                     <li><a href="http://webchat.freenode.net/?randomnick=1&channels=openshift&uio=d4">IRC channel at #openshift on freenode.net</a></li>
                     <li><a href="http://git-scm.com/documentation">Git documentation</a></li>
                   </ul>
+                  <h3>Contributors</h3>
+                  <p><a href="https://sites.google.com/site/structurepredictiontools/">View Project Site</a> contains all the relevant materials. </p>
+                  <ul>
+                  	<li>Sayantan Ghosh</li>
+                  </ul>
 
                   
 
