--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
           <hgroup>
-            <h1>Welcome to your WildFly 9 application on OpenShift</h1>
+            <h1>Welcome to Project Central Repositron: Your Wildfly application on OpenShift</h1>
           </hgroup>
 
 
